# splendor

./: .gitignore  CMakeLists.txt  README.md  agents.py  baselines.py  build.sh  game.py  game_stats.py  inspect_data.ipynb  mcts.py  mcts_test.py  play.py  player.py  prepare_data.py  prepare_features.py  rate_model.py  requirements.txt  sample_task.json  self_play.py  self_play_config.json  splendor_game.py  task.json  train.py  train_gb.py
assets/: human_ratings.txt  human_ratings_online.txt
pysplendor/: agents.py  game.py  game_state.py  mcts.py  mcts_test.py  splendor.py
python_splendor/: agents.py  cards.csv  game.py  mcts.py  mcts_test.py  play.py  splendor_game.py
sample_configs/: policy_vs_mcts.json  random_vs_mcts.json  self_play_config.json  train_config.json
scripts/: debug.py  human_stats.py  plot_results.py  splendor_job.py  train_gb.py
src/: CMakeLists.txt  agents.cpp  agents.h  cards.h  game.cpp  game.h  game_state.cpp  game_state.h  main.cpp  mcts.cpp  mcts.h  nn_policy.cpp  nn_policy.h  random_util.cpp  random_util.h  splendor.cpp  splendor.h  splendor_agents.cpp  splendor_agents.h  util.cpp  util.h
tests/: mcts_test.py  pysplendor_test.py  state_encoder_test.py  state_encoder_test_config.json  test_config.json
